# workhorse-assistant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: .gitkeep  2026-05-25-bootstrap-tauri-and-knowledge-base.md
docs/exec-plans/completed/: .gitkeep
docs/product-specs/: agent-workspace.md  index.md
docs/references/: README.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/pty/: mod.rs
src/agent/: actionRegistry.ts  catalog.test.ts  catalog.ts  contract.ts  dispatch.test.ts  dispatch.ts  fallbackTools.test.ts  fallbackTools.ts  index.ts  registries.test.ts  stateRegistry.ts  test-setup.ts
src/components/: AgentRail.tsx  FileTree.tsx  MainChat.tsx  Modal.tsx  MonoPath.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  TaskListModal.tsx  Terminal.tsx  TitleBar.tsx  WindowResizeHandles.tsx  agent-rail.mock.ts  right-panel.mock.ts
src/hooks/: use-auto-scroll.ts
src/ipc/: agent.ts  app.ts  clipboard.ts  index.ts  pty.ts  result.ts  runtime.ts  useAgentConnection.ts  useWindowState.ts  window.ts
(+77 files in other folders)
